create login page

--- a/splash-screen.html
+++ b/splash-screen.html
@@ -82,7 +82,11 @@
   -->
 </head>
 <body>
-  <p>Website go here...</p>
+  <div class="background-container">
+    <div class="splash-screen">
+      <img class="logo" src="./assets/images/logos/logo.png" alt="Logo">
+    </div>
+  </div>
 
   <script type="text/javascript" src="./../assets/js/jquery/jquery.min.js"></script>
   <script type="text/javascript" src="./../assets/js/jquery-migrate/jquery-migrate-3.0.1.min.js"></script>
