--- a/login.html
+++ b/login.html
@@ -82,7 +82,42 @@
   -->
 </head>
 <body>
-  <p>Website go here...</p>
+  <div class="background-container">
+    <div class="container">
+      <form class="login" action="">
+        <div class="login-segment is-logo">
+          <img class="logo" src="./assets/images/logos/logo.png" alt="Logo">
+        </div>
+        <div class="login-segment is-form">
+          <div class="panel-form">
+            <div class="field"><!-- add class 'is-error' to display error UI and validation message -->
+              <input class="field-input" type="text" placeholder="ชื่อผู้ใช้งาน">
+              <p class="field-message">error_text</p>
+            </div>
+            <div class="field"><!-- add class 'is-error' to display error UI and validation message -->
+              <input class="field-input" type="password" placeholder="รหัสผ่าน">
+              <p class="field-message">error_text</p>
+            </div>
+          </div>
+        </div>
+        <div class="login-segment is-button">
+          <button class="button is-fluid" type="button">
+            <span class="button-body">
+              <span class="button-text">Login</span>
+            </span>
+          </button>
+        </div>
+        <div class="login-segment is-footer">
+          <div class="login-segment is-link-left">
+            <a href="#">ลืมรหัสผ่าน?</a>
+          </div>
+          <div class="login-segment is-link-left">
+            <a href="#">ยังไม่มีบัญชีผู้ใช้งาน?</a>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
 
   <script type="text/javascript" src="./../assets/js/jquery/jquery.min.js"></script>
   <script type="text/javascript" src="./../assets/js/jquery-migrate/jquery-migrate-3.0.1.min.js"></script>
