create register page

--- a/register.html
+++ b/register.html
@@ -82,13 +82,19 @@
   -->
 </head>
 <body>
-  <div class="background-container">
-    <div class="container">
-      <form class="login" action="">
-        <div class="login-segment is-logo">
-          <img class="logo" src="./assets/images/logos/logo.png" alt="Logo">
+  <div class="background-container-flexible">
+    <div class="container-with-line">
+      <form class="register" action="">
+        <div class="register-segment is-header">
+          <h2 class="heading">
+            <img class="logo" src="./assets/images/logos/logo-small.svg" alt="Logo">
+            <span>สมัครสมาชิก</span>
+          </h2>
         </div>
-        <div class="login-segment is-form">
+
+
+
+        <div class="register-segment is-form">
           <div class="panel-form">
             <div class="field"><!-- add class 'is-error' to display error UI and validation message -->
               <input class="field-input" type="text" placeholder="ชื่อผู้ใช้งาน">
@@ -100,18 +106,18 @@
             </div>
           </div>
         </div>
-        <div class="login-segment is-button">
+        <div class="register-segment is-button">
           <button class="button is-fluid" type="button">
             <span class="button-body">
-              <span class="button-text">Login</span>
+              <span class="button-text">register</span>
             </span>
           </button>
         </div>
-        <div class="login-segment is-footer">
-          <div class="login-segment is-link-left">
+        <div class="register-segment is-footer">
+          <div class="register-segment is-link-left">
             <a href="#">ลืมรหัสผ่าน?</a>
           </div>
-          <div class="login-segment is-link-left">
+          <div class="register-segment is-link-left">
             <a href="#">ยังไม่มีบัญชีผู้ใช้งาน?</a>
           </div>
         </div>
