customize register layout

--- a/login.html
+++ b/login.html
@@ -103,7 +103,7 @@
         <div class="login-segment is-button">
           <button class="button is-fluid" type="button">
             <span class="button-body">
-              <span class="button-text">Login</span>
+              <span class="button-text">เข้าสู่ระบบ</span>
             </span>
           </button>
         </div>
