fix input type in register page

--- a/register.html
+++ b/register.html
@@ -101,11 +101,11 @@
               <p class="field-message">error_text</p>
             </div>
             <div class="field"><!-- add class 'is-error' to display error UI and validation message -->
-              <input class="field-input" type="password" placeholder="รหัสผ่าน*">
+              <input class="field-input" type="text" placeholder="รหัสผ่าน*">
               <p class="field-message">error_text</p>
             </div>
             <div class="field"><!-- add class 'is-error' to display error UI and validation message -->
-              <input class="field-input" type="password" placeholder="ยืนยันรหัสผ่าน*">
+              <input class="field-input" type="text" placeholder="ยืนยันรหัสผ่าน*">
               <p class="field-message">error_text</p>
             </div>
           </div>
@@ -120,15 +120,15 @@
               <p class="field-message">error_text</p>
             </div>
             <div class="field"><!-- add class 'is-error' to display error UI and validation message -->
-              <input class="field-input" type="password" placeholder="นามสกุล*">
+              <input class="field-input" type="text" placeholder="นามสกุล*">
               <p class="field-message">error_text</p>
             </div>
             <div class="field"><!-- add class 'is-error' to display error UI and validation message -->
-              <input class="field-input" type="password" placeholder="วันเกิด*">
+              <input class="field-input" type="text" placeholder="วันเกิด*">
               <p class="field-message">error_text</p>
             </div>
             <div class="field"><!-- add class 'is-error' to display error UI and validation message -->
-              <input class="field-input" type="password" placeholder="Line ID">
+              <input class="field-input" type="text" placeholder="Line ID">
               <p class="field-message">error_text</p>
             </div>
           </div>
