customize register finished layout

--- a/register-5.html
+++ b/register-5.html
@@ -91,34 +91,106 @@
             <span>กรุณาตรวจสอบข้อมูล</span>
           </h2>
         </div>
-
         <div class="register-segment is-group-info">
           <div class="register-segment is-label">
-            <span class="text-first-sm-bold is-label">บัญชีใช้งาน</span>
+            <span class="text-first-sm-bold is-label">บัญชีผู้ใช้งาน</span>
           </div>
           <div class="register-segment is-info">
-            <div class="text-first-xxs-bold is-info">อีเมล์ : remembersirichai@gmail.com</div>
-            <div class="text-first-xxs-bold is-info">อีเมล์ : remembersirichai@gmail.com</div>
+            <span class="text-first-xxs-bold is-info">อีเมล์ : remembersirichai@gmail.com</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">รหัสผ่าน: 1234</span>
           </div>
         </div>
         <div class="register-segment is-group-info">
           <div class="register-segment is-label">
-            <span class="text-first-sm-bold is-label">บัญชีใช้งาน</span>
+            <span class="text-first-sm-bold is-label">ข้อมูลส่วนตัว</span>
           </div>
           <div class="register-segment is-info">
-            <div class="text-first-xxs-bold is-info">อีเมล์ : remembersirichai@gmail.com</div>
-            <div class="text-first-xxs-bold is-info">อีเมล์ : remembersirichai@gmail.com</div>
+            <span class="text-first-xxs-bold is-info">ชื่อ : ศิริชัย</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">นามสกุล : ลาภมหานนท์</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">วันเกิด : 16/9/1960</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">Line ID : sirichai-yong</span>
           </div>
         </div>
-
-
-
-        <div class="register-segment is-button">
-          <button class="button is-fluid" type="button">
-            <span class="button-body">
-              <span class="button-text">สมัครสมาชิก</span>
-            </span>
-          </button>
+        <div class="register-segment is-group-info">
+          <div class="register-segment is-label">
+            <span class="text-first-sm-bold is-label">ที่อยู่</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">บ้านเลขที่ : 99/172</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">หมู่ที่ : 2</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">ถนน : รามอินทรา 65</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">แขวง/ตำบล : ท่าแร้ง</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">เขต/อำเภอ : บางเขน</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">จังหวัด : กรุงเทพมหานคร</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">รหัสไปรษณีย์ : 10230</span>
+          </div>
+        </div>
+        <div class="register-segment is-group-info">
+          <div class="register-segment is-label">
+            <span class="text-first-sm-bold is-label">เบอร์ติดต่อ</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">เบอร์โทรศัพท์ : 0877000700</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">เบอร์มือถือ : 0880883714</span>
+          </div>
+        </div>
+        <div class="register-segment is-group-info">
+          <div class="register-segment is-label">
+            <span class="text-first-sm-bold is-label">ข้อมูลร้านค้า</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">ชื่อร้าน : Yong IT</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">ทำเลที่ตั้ง/ห้าง : Big C รามอินทรา</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">จังหวัด : กรุงเทพมหานคร</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">รหัสการสมัคร : 1234567890</span>
+          </div>
+          <div class="register-segment is-info">
+            <span class="text-first-xxs-bold is-info">สถานะพนักงาน : เจ้าของกิจการ / หุ้นส่วน</span>
+          </div>
+        </div>
+        <div class="register-segment is-group-button">
+          <div class="register-segment is-inner-button">
+            <button class="button is-fluid" type="button">
+              <span class="button-body">
+                <span class="button-text">ยืนยันและสมัครสมาชิก</span>
+              </span>
+            </button>
+          </div>
+          <div class="register-segment is-inner-button">
+            <button class="button is-fluid" type="button">
+              <span class="button-body">
+                <span class="button-text">กลับไปแก้ไขข้อมูล</span>
+              </span>
+            </button>
+          </div>
         </div>
       </form>
     </div>
