create home page

--- a/home.html
+++ b/home.html
@@ -82,41 +82,54 @@
   -->
 </head>
 <body>
-  <div class="background-container">
-    <div class="container">
-      <form class="login" action="">
-        <div class="login-segment is-logo">
-          <img class="logo" src="./assets/images/logos/logo.svg" alt="Logo">
-        </div>
-        <div class="login-segment is-form">
-          <div class="panel-form">
-            <div class="field"><!-- add class 'is-error' to display error UI and validation message -->
-              <input class="field-input" type="text" placeholder="ชื่อผู้ใช้งาน">
-              <p class="field-message">error_text</p>
-            </div>
-            <div class="field is-error"><!-- add class 'is-error' to display error UI and validation message -->
-              <input class="field-input" type="password" placeholder="รหัสผ่าน">
-              <p class="field-message">error_text</p>
-            </div>
-          </div>
-        </div>
-        <div class="login-segment is-button">
-          <button class="button is-fluid" type="button">
-            <span class="button-body">
-              <span class="button-text">เข้าสู่ระบบ</span>
-            </span>
-          </button>
-        </div>
-        <div class="login-segment is-footer">
-          <div class="login-segment is-link-left">
-            <a href="#">ลืมรหัสผ่าน?</a>
-          </div>
-          <div class="login-segment is-link-left">
-            <a href="#">ยังไม่มีบัญชีผู้ใช้งาน?</a>
-          </div>
-        </div>
-      </form>
+  <div class="topbar">
+    <div class="topbar-info">
+      <span class="text-first-lg-bold is-orange-1 is-ellipsis" title='ศิริชัย  ลาภมหานนท์'>ศิริชัย  ลาภมหานนท์</span>
+      <span class="text-first-sm-bold is-gray-4 is-ellipsis" title='ร้าน Young IT'>ร้าน Young IT</span>
     </div>
+    <div class="topbar-point">
+      <span class="text-first-hg-bold is-white for-point-number">9,999</span>
+      <span class="text-first-md-bold is-white for-point-unit">คะแนน</span>
+    </div>
+  </div>
+
+  <div class="container-content">
+    Content here!!!
+  </div>
+
+  <div class="navigationbar">
+      <a class="navigation-button is-active" href="#">
+        <img class="navigation-icon" src="./assets/images/icons/icon-news.svg" alt="Icon">
+        <span class="text-first-xs-bold is-white">ข่าวสาร</span>
+      </a>
+      <a class="navigation-button" href="#">
+        <img class="navigation-icon" src="./assets/images/icons/icon-scan.svg" alt="Icon">
+        <span class="text-first-xs-bold is-white">แสกนสินค้า</span>
+      </a>
+      <a class="navigation-button" href="#">
+        <img class="navigation-icon" src="./assets/images/icons/icon-reward.svg" alt="Icon">
+        <span class="text-first-xs-bold is-white">แลกรางวัล</span>
+      </a>
+      <a class="navigation-button" href="#">
+        <img class="navigation-icon" src="./assets/images/icons/icon-profile.svg" alt="Icon">
+        <span class="text-first-xs-bold is-white">โปรไฟล์</span>
+      </a>
+      <a class="navigation-button" href="#">
+        <img class="navigation-icon" src="./assets/images/icons/icon-keep-large.svg" alt="Icon">
+        <span class="text-first-xs-bold is-white">Keep</span>
+      </a>
+      <a class="navigation-button" href="#">
+        <img class="navigation-icon" src="./assets/images/icons/icon-contact.svg" alt="Icon">
+        <span class="text-first-xs-bold is-white">ติดต่อเรา</span>
+      </a>
+      <a class="navigation-button" href="#">
+        <img class="navigation-icon" src="./assets/images/icons/icon-home.svg" alt="Icon">
+        <span class="text-first-xs-bold is-white">เอสเทรค</span>
+      </a>
+      <a class="navigation-button" href="#">
+        <img class="navigation-icon" src="./assets/images/icons/icon-insurance.svg" alt="Icon">
+        <span class="text-first-xs-bold is-white">เช็คประกัน</span>
+      </a>
   </div>
 
   <script type="text/javascript" src="./../assets/js/jquery/jquery.min.js"></script>
