--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Project_Name</title>
-  <meta name="application-name" content="Project_Name">
-  <meta name="description" content="Description_Detail">
+  <title>S-TREK GO</title>
+  <meta name="application-name" content="S-TREK GO">
+  <meta name="description" content="S-TREK GO">
   <!-- Control the behavior of search engine crawling and indexing: All Search Engines -->
   <meta name="robots" content="index, follow, noodp">
   <!-- Google Specific -->
@@ -14,7 +14,7 @@
   <!-- A deprecated tag that does the same as the keywords meta tag -->
   <meta name="classification" content="business">
   <!-- The same function as the keywords tag -->
-  <meta name="category" content="web, web design, graphic, graphic design, character, character design, web animation, web interactive, developer, html, css, sass">
+  <meta name="category" content="S-TREK GO">
   <!-- Full domain name or web address -->
   <meta name="url" content="https://Project_Name.com/">
   <!-- Website shows up in all countries and languages -->
@@ -54,8 +54,8 @@
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="Content_Title"/>
   <meta property="og:image" content="https://Project_Name.com/Facebook_Cover_Timeline_Image.jpg"/>
-  <meta property="og:description" content="Description_Detail"/>
-  <meta property="og:site_name" content="Project_Name"/>
+  <meta property="og:description" content="S-TREK GO"/>
+  <meta property="og:site_name" content="S-TREK GO"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="article:author" content="Article_Author_Name"/>
   -->
@@ -69,7 +69,7 @@
   <meta name="twitter:creator" content="@individual_account"/>
   <meta name="twitter:url" content="https://Project_Name.com/page.html"/>
   <meta name="twitter:title" content="Content Title"/>
-  <meta name="twitter:description" content="Description_Detail_less_than_200_characters"/>
+  <meta name="twitter:description" content="S-TREK GO_less_than_200_characters"/>
   <meta name="twitter:image" content="https://Project_Name.com/Twitter_Cover_Timeline_Image.jpg"/>
   -->
 
@@ -77,7 +77,7 @@
   <!--
   <link href="https://plus.google.com/YourPage" rel="publisher"/>
   <meta itemprop="name" content="Content_Title"/>
-  <meta itemprop="description" content="Description_Detail_less_than_200_characters"/>
+  <meta itemprop="description" content="S-TREK GO_less_than_200_characters"/>
   <meta itemprop="image" content="https://example.com/GooglePlus_Cover_Timeline_Image.jpg"/>
   -->
 </head>
